--- a/leo-satellite-observer-t.html
+++ b/leo-satellite-observer-t.html
@@ -286,7 +286,8 @@
           if (map) map.remove();
           map = L.map('map', {
             center: [20, 0],
-            zoom: 3,
+            zoom: 2,
+            worldCopyJump: true,
             zoomControl: true,
             attributionControl: true
           });
@@ -403,11 +404,12 @@
             circles.forEach(circle => {
               const greatCircle = L.greatCircle([coords.lat, coords.lng], {
                 radius: circle.radius,
-                olor: '#0000FF',
-                fillColor: '#0088FF',
+                color: circle.strokeColor || "#FF0000",
                 fillOpacity: 0.2,
                 weight: 1,
                 wrapElements: true,
+                fillColor: circle.strokeColor || "#FF0000",
+                fillOpacity: circle.fillOpacity !== undefined ? circle.fillOpacity : 0.05,
                 clipLat: 85,
                 degStep: 0.5,
                 maxCopies: -1
