--- a/leo-satellite-observer-t.html
+++ b/leo-satellite-observer-t.html
@@ -204,6 +204,10 @@
           zoomControl: true,
           attributionControl: true
         });
+        
+        L.control.zoom({
+                position: 'bottomright'
+            }).addTo(map);
 
         var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
           attribution: 'Map data © <a href="https://openstreetmap.org">OpenStreetMap</a> contributors',
