--- a/leo-satellite-observer-t.html
+++ b/leo-satellite-observer-t.html
@@ -201,7 +201,7 @@
         map = L.map('map', {
           center: [0, 0],
           zoom: 2,
-          zoomControl: true,
+          zoomControl: false,
           attributionControl: true
         });
         
