--- a/leo-satellite-observer-t.html
+++ b/leo-satellite-observer-t.html
@@ -324,7 +324,8 @@
           ];
 
           circles.forEach(circle => {
-              const greatCircle = L.greatCircle([coords.lat, coords.lng], {
+              // Draw footprint
+              L.greatCircle([coords.lat, coords.lng], {
                   radius: circle.radius,
                   color: circle.strokeColor || "#FF0000",
                   fillOpacity: circle.fillOpacity !== undefined ? circle.fillOpacity : 0.05,
@@ -335,24 +336,19 @@
                   maxCopies: -1
               }).addTo(map);
 
-              // Get LatLng points of the great circle
-              const latlngs = greatCircle.getLatLngs()[0]; // first ring
+              // Compute label position on the footprint using the same radius and angle
+              const labelPoint = destinationPoint(coords.lat, coords.lng, circle.radius, circle.angle);
 
-              if (latlngs && latlngs.length > 0) {
-                  // Pick a point somewhere along the circle to place the label
-                  const labelIndex = Math.floor(latlngs.length * 0.25); // 25% along the curve
-                  const labelPoint = latlngs[labelIndex];
-
-                  L.marker(labelPoint, {
-                      icon: L.divIcon({
-                          className: 'sat-label',
-                          html: `<span>${circle.label}</span>`,
-                          iconSize: [50, 20],
-                          iconAnchor: [25, 10] // center the label
-                      })
-                  }).addTo(map);
-              }
+              // Place the label using a permanent tooltip
+              L.marker([labelPoint.lat, labelPoint.lng], { opacity: 0 })
+               .bindTooltip(circle.label, {
+                   permanent: true,
+                   direction: 'right',
+                   className: 'sat-label',
+                   offset: [5, 0]
+               }).addTo(map);
           });
+
 
         }
       }
